# tree-sitter-lark

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-lark.pc.in
bindings/c/tree_sitter/: tree-sitter-lark.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lark/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLarkTests/: TreeSitterLarkTests.swift
queries/: highlights.scm
queries/lark/: highlights.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  rules.txt  statements.txt  terminals.txt
